Sun Dec 12 12:24:48 GMT 2010  Olly Betts <olly@survex.com>

	* weight/tradweight.cc: Fix calculation order to avoid inconsistent
	  weights due to rounding for TradWeight(0).
	* tests/api_backend.cc: Add regression test tradweight2.

Sat Dec 11 11:38:32 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS: Update thanks list with bug reporters and patch submitters.

Thu Dec 09 03:59:42 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Dec 09 03:58:20 GMT 2010  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Add FIXME note about using sendfile() or
	  similar.

Tue Dec 07 10:16:31 GMT 2010  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Note 1.0.x version #515 was fixed in.

Mon Dec 06 05:26:01 GMT 2010  Olly Betts <olly@survex.com>

	* net/replicatetcpclient.cc: Rearrange loop to avoid duplicating code.

Mon Dec 06 01:39:23 GMT 2010  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix typo so we test for OP_NEAR or
	  OP_PHRASE, not twice for OP_NEAR, which fixes a bug with not setting
	  the correct window size for default_op of OP_PHRASE in some cases.
	  Factor out the "is_positional(op)" test into an inlined function to
	  help avoid repeating this error.
	* tests/queryparsertest.cc: Add regression test coverage.

Mon Dec 06 01:01:03 GMT 2010  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add coverage for OP_PHRASE as default_op.

Sun Dec 05 12:35:32 GMT 2010  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc: Fix calculation order to avoid inconsistent
	  weights due to rounding when BM25Weight is used with certain
	  non-default parameter combinations.
	* tests/api_backend.cc: Add regression test bm25weight2.

Sun Dec 05 12:10:36 GMT 2010  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Add FIXME comment regarding
	  resolve_duplicate_metadata() getting called multiple times for the
	  same key in multipass mode.
