@@ -1,3 +1,11 @@
+Mon Dec 13 13:34:30 GMT 2010  Olly Betts <olly@survex.com>
+
+	* backends/remote/remote-database.cc,common/remote-database.h,
+	  common/remoteprotocol.h,common/remoteserver.h,
+	  docs/remote_protocol.html,net/remoteserver.cc,tests/api_metadata.cc:
+	  Add support for iterating metadata keys with the remote backend.
+	  This change necessitated a minor version bump in the remote protocol.
+
 Sun Dec 12 12:24:48 GMT 2010  Olly Betts <olly@survex.com>
 
 	* weight/tradweight.cc: Fix calculation order to avoid inconsistent
